--- a/packages/vue2-jest/package.json
+++ b/packages/vue2-jest/package.json
@@ -55,7 +55,10 @@
     "chalk": "^2.1.0",
     "css-tree": "^2.0.1",
     "source-map": "0.5.6",
-    "tsconfig": "^7.0.0"
+    "convert-source-map": "1.8.0",
+    "tsconfig": "^7.0.0",
+    "find-babel-config": "^1.1.0",
+    "node-cache": "^4.1.1"
   },
   "repository": {
     "type": "git",
