--- a/e2e/2.x/babel-in-package/package.json
+++ b/e2e/2.x/babel-in-package/package.json
@@ -13,14 +13,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@vue/babel-preset-jsx": "^1.2.4",
     "@vue/test-utils": "^1.1.0",
     "@vue/vue2-jest": "^29.0.0",
-    "coffeescript": "^2.3.2",
+    "coffeescript": "^2.0.3",
     "jest": "29.x",
     "jest-environment-jsdom": "29.x",
-    "typescript": "^4.6.4"
+    "typescript": "^2.5.2"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -35,9 +33,12 @@
     }
   },
   "babel": {
-    "presets": [
-      "@babel/env",
-      "@vue/babel-preset-jsx"
-    ]
+    "env": {
+      "test": {
+        "presets": [
+          "env"
+        ]
+      }
+    }
   }
 }
