--- a/packages/vue2-jest/package.json
+++ b/packages/vue2-jest/package.json
@@ -25,22 +25,30 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "babel-preset-env": "^1.6.1",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "29.x",
     "conventional-changelog": "^1.1.5",
     "jest": "29.x",
     "semantic-release": "^15.13.2",
-    "typescript": "^4.6.4",
+    "typescript": "^2.5.2",
     "vue": "^2.7.7",
-    "vue-template-compiler": "^2.7.7"
+    "vue-template-compiler": "^2.7.7",
+    "clear-module": "^2.1.0",
+    "coffeescript": "^2.0.3",
+    "hamljs": "^0.6.2",
+    "jade": "^1.11.0",
+    "postcss": "^7.0.18",
+    "postcss-css-variables": "^0.13.0",
+    "postcss-load-config": "^2.1.0",
+    "postcss-nested": "^4.1.2",
+    "pug": "^2.0.0-rc.3",
+    "stylus": "^0.54.5"
   },
   "peerDependencies": {
     "@babel/core": "7.x",
     "babel-jest": "29.x",
     "jest": "29.x",
-    "typescript": ">= 4.3",
     "vue": "^2.x",
     "vue-template-compiler": "^2.x"
   },
@@ -50,7 +58,6 @@
     }
   },
   "dependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@vue/component-compiler-utils": "^3.1.0",
     "chalk": "^2.1.0",
     "css-tree": "^2.0.1",
@@ -58,7 +65,12 @@
     "convert-source-map": "1.8.0",
     "tsconfig": "^7.0.0",
     "find-babel-config": "^1.1.0",
-    "node-cache": "^4.1.1"
+    "node-cache": "^4.1.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "deasync": "^0.1.15",
+    "extract-from-css": "^0.4.4",
+    "object-assign": "^4.1.1",
+    "vue-template-es2015-compiler": "^1.6.0"
   },
   "repository": {
     "type": "git",
